--- a/.github/workflows/cln-plugin.yaml
+++ b/.github/workflows/cln-plugin.yaml
@@ -2,10 +2,12 @@ name: CI tests for CLN watchtower-plugin
 
 on: [push, pull_request]
 
+env:
+  bitcoind_version: 0.20.1
+  cln_version: 0.11.0.1
+
 jobs:
   cache-cln:
-    strategy:
-      fail-fast: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,30 +19,26 @@ jobs:
           cache-name: cache-cln-dev
         with:
           path: lightning
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-v0.11.0.1 
-      - name: Install CLN
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-v${{ env.cln_version }}
+      - name: Compile CLN
         if: ${{ steps.cache-cln.outputs.cache-hit == 'false' }}
         run: |
           sudo apt-get update && sudo apt-get install gettext
-          git clone https://github.com/ElementsProject/lightning.git && cd lightning && git checkout v0.11.0.1
-          pip install --user poetry && poetry install && source $(poetry env info -p)/bin/activate
-          ./configure --enable-developer
-          make && sudo make install
+          git clone https://github.com/ElementsProject/lightning.git && cd lightning && git checkout v${{ env.cln_version }}
+          pip install --user poetry && poetry install
+          ./configure --enable-developer && poetry run make
 
   cln-plugin:
     needs: cache-cln
-    strategy:
-      fail-fast: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
-      - name: Install bitcoind (0.20.1)
+      - name: Install bitcoind
         run: |
-          wget https://bitcoincore.org/bin/bitcoin-core-0.20.1/bitcoin-0.20.1-x86_64-linux-gnu.tar.gz
-          tar -xzf bitcoin-0.20.1-x86_64-linux-gnu.tar.gz
-          ln -s $(pwd)/bitcoin-0.20.1/bin/bitcoind /usr/local/bin
-          ln -s $(pwd)/bitcoin-0.20.1/bin/bitcoin-cli /usr/local/bin
+          wget https://bitcoincore.org/bin/bitcoin-core-${{ env.bitcoind_version }}/bitcoin-${{ env.bitcoind_version }}-x86_64-linux-gnu.tar.gz
+          tar -xzf bitcoin-${{ env.bitcoind_version }}-x86_64-linux-gnu.tar.gz
+          ln -s $(pwd)/bitcoin-${{ env.bitcoind_version }}/bin/bitcoin* /usr/local/bin
       - name: Load CLN cache
         id: cache-cln
         uses: actions/cache@v3
@@ -48,7 +46,7 @@ jobs:
           cache-name: cache-cln-dev
         with:
           path: lightning
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-v0.11.0.1 
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-v${{ env.cln_version }}
       - name: Link CLN
         run: |
           cd lightning && sudo make install
@@ -63,5 +61,4 @@ jobs:
       - name: Run tests
         run: |
           cd watchtower-plugin/tests
-          source $(poetry env info -p)/bin/activate
-          DEVELOPER=1 pytest test.py
+          DEVELOPER=1 poetry run pytest test.py -s
