--- a/teos/Cargo.toml
+++ b/teos/Cargo.toml
@@ -22,7 +22,7 @@ log = "0.4"
 prost = "0.9"
 rcgen = { version = "0.8", features = ["pem", "x509-parser"] }
 rusqlite = { version = "0.26.0", features = [ "bundled", "limits" ] }
-serde = "1.0.130"
+serde = { version = "1.0.130", features = [ "derive" ] }
 serde_json = "1.0"
 simple_logger = "2.1.0"
 structopt = "0.3"
